[package]
name = "sherpa-transducers"
description = "low latency ASR via sherpa-onnx streaming zipformer-transducer models"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Cross-Product-Labs/sherpa-transducers"
keywords = ["audio", "speech-recognition", "sherpa", "asr", "realtime"]
authors = ["nytopop"]
readme = "readme.md"

[features]
default = ["static", "download-models"]
cuda = ["sherpa-rs-sys/cuda"]
directml = ["sherpa-rs-sys/directml"]
static = ["sherpa-rs-sys/static"]
download-binaries = ["sherpa-rs-sys/download-binaries"]
download-models = ["futures", "tokio", "reqwest", "indicatif", "decompress"]

[dependencies]
sherpa-rs-sys = { version = "0.6.6", default-features = false }
anyhow = "1.0"
num_cpus = "1.16"

# download-models
futures = { version = "0.3", optional = true }
tokio = { version = "1", features = ["fs", "macros"], optional = true }
reqwest = { version = "0.12", features = ["stream"], optional = true }
indicatif = { version = "0.17", optional = true }
decompress = { version = "0.6", features = ["tarbz"], default-features = false, optional = true }
