[package]
name = "sherpa-transducers"
description = "low latency ASR via sherpa-onnx streaming zipformer-transducer models"
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Cross-Product-Labs/sherpa-transducers"
keywords = ["audio", "speech-recognition", "sherpa", "asr", "realtime"]
authors = ["nytopop"]
readme = "readme.md"

[features]
default = ["static", "download-models"]
static = ["sherpa-rs-sys/static"]
download-models = ["tokio", "hf-hub", "serde", "serde_json"]
cuda = ["sherpa-rs-sys/cuda"]
directml = ["sherpa-rs-sys/directml"]
download-binaries = ["sherpa-rs-sys/download-binaries"]

[dependencies]
sherpa-rs-sys = { version = "0.6.6", default-features = false }
anyhow = "1.0"
num_cpus = "1.16"

# download-models
tokio = { version = "1", features = ["fs"], optional = true }
hf-hub = { version = "0.4", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
